Declare FlightStreamPlugin dependency on ArrowBasePlugin in integration tests
The PluginComponentRegistry commit made FlightStreamPlugin look up
ArrowAllocatorService eagerly from the registry at createComponents()
time. In production, sortBundles() guarantees dependency order via
extendedPlugins. In tests, InternalTestCluster creates PluginInfo with
empty extendedPlugins for nodePlugins() classes, making init order
non-deterministic.

Move FlightStreamPlugin to additionalNodePlugins() with explicit
extendedPlugins = [ArrowBasePlugin] so the test framework sorts it
after ArrowBasePlugin, matching production behavior.

Signed-off-by: bowenlan-amzn <bowenlan23@gmail.com>